# loafer

./: .dockerignore  .env.example  .gitignore  .ruff.toml  Antigravity.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  docker.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
examples/: elt_api_to_postgres.yaml  etl_postgres_to_csv.yaml  pipeline.example.yaml  pipeline.quickstart.yaml
examples/data/: inventory_data.xlsx  sample.csv
examples/generate_data/: README.md  generate_files.py  run_all.sh  setup_databases.sh  setup_mongo.js  setup_mysql.sql  setup_postgres.sql
examples/output/: inventory_flat.csv  output.json
examples/pipelines/: csv_to_postgres.yaml  excel_to_csv.yaml  mongo_to_csv.yaml  mysql_to_json.yaml  postgres_orders_to_csv.yaml  postgres_users_to_json.yaml
examples/transforms/: csv_transform.py  excel_transform.py  mongo_transform.py  mysql_transform.py  postgres_orders_transform.py  postgres_users_transform.py  sample_transform.py
loafer/: __init__.py  __main__.py  cli.py  config.py  daemon.py  exceptions.py  logging.py  runner.py  scheduler.py
loafer/adapters/sources/: mongo.py  mysql.py  pdf.py  postgres.py  rest_api.py  sqlite.py
loafer/adapters/targets/: mongo.py  postgres.py
loafer/agents/: extract.py  load.py  load_raw.py  transform.py  transform_in_target.py  validate.py
loafer/connectors/: base.py  registry.py
loafer/connectors/sources/: csv_source.py  excel_source.py
loafer/connectors/targets/: csv_target.py  json_target.py
loafer/core/: destructive.py
loafer/graph/: elt.py  etl.py  state.py
loafer/llm/: base.py  claude.py  gemini.py  openai.py  prompt_builder.py  qwen.py  registry.py  schema.py
loafer/ports/: connector.py  llm.py
loafer/transform/: __init__.py  ai_runner.py  code_validator.py  custom_runner.py  sql_runner.py  sql_validator.py
scripts/: fix_venv.sh
tests/: conftest.py  manual_test.py  stress_test.py
tests/e2e/: test_cli_run.py  test_cli_schedule.py  test_pipeline_e2e.py
tests/integration/: conftest.py  test_elt_pipeline.py  test_etl_pipeline.py  test_mongo.py  test_mysql.py  test_postgres.py
tests/unit/: test_auto_detect.py  test_benchmarks.py  test_code_validator.py  test_config.py  test_daemon.py  test_destructive_detector.py  test_edge_cases.py  test_elt_graph.py  test_etl_graph.py  test_gemini.py  test_llm_providers.py  test_logging.py  test_multi_llm_providers.py  test_prompt_builder.py  test_runner_streaming.py  test_scheduler.py  test_schema_sampler.py  test_sql_validator.py
tests/unit/agents/: test_extract_agent.py  test_load_agent.py  test_load_raw.py  test_transform_agent.py  test_transform_in_target.py  test_validate_agent.py
tests/unit/connectors/: test_csv_source.py  test_csv_target.py  test_excel_source.py  test_json_target.py  test_mongo_source.py  (+7 more)
web/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/public/: search-index.json
web/scripts/: build-search.js
web/src/: App.tsx  index.css  tokens.css  typography.css  vite-env.d.ts
(+37 files in other folders)
