[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "loafer-etl"
dynamic = ["version"]
description = "AI-assisted ETL and ELT pipelines from the command line"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["etl", "elt", "data-pipeline", "ai", "cli"]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "structlog>=23.0",
    "langgraph>=0.2",
    "google-genai>=1.0",
    "sqlglot>=20.0",
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "pymongo>=4.6",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "apscheduler>=3.10,<4",
    "tenacity>=9.1.4",
    "sqlalchemy>=2.0.48",
    "pdfplumber>=0.11.9",
    "anthropic>=0.88.0",
    "openai>=2.30.0",
    "dashscope>=1.25.15",
]

[project.scripts]
loafer = "loafer.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["loafer"]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires docker services (postgres, mongo)",
    "e2e: end-to-end CLI tests",
]

[tool.ruff.lint]
ignore = [
    "TC001",  # Move application import into type-checking block (LangGraph needs these at runtime)
    "TC002",  # Move third-party import into type-checking block (dashscope has no stubs)
    "TC003",  # Move stdlib import into type-checking block (same reason)
    "B008",   # Do not perform function call in argument defaults (typer.Argument/Option is the standard pattern)
    "E402",   # Module level import not at top of file (connector registry registers on import)
]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
]
